# DeltaForceMarketBot

./: .gitignore  README.md  debug.py  main.py  pyproject.toml  test_cnocr.py  test_ddddocr.py  test_find_position.py
config/: bullet_info.json.sample  buy_items_info.json  card_info.json.sample  sys_info.json
test/: test_ddddocr.py  test_easyocr.py  test_find_position.py  test_move_to_position.py  test_paddleocr.py  test_pygetwindow.py  test_tesseract.py
